--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>subham's portfolio</title>
-</head>
-
-<body>
-   <h1>Subham's portfolio</h1> 
-   <h2>I am a web developer</h2>
-   <hr />
-   <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
-   <img src="./assets/images/movie-ranking.png" height="200" alt="project image" />
-   <a href="../3.4 Birthday Invite Project/index.html"><h3>birthday Invite project</h3></a>
-   <h3><img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project" /></h3>
-
-   <hr />
-
-   <a href="../4.3 HTML Porfolio Project/public/about.html">About me</a>
-   <a href="../public/contact.html">Contact me</a>
- 
-</body>
-
-</html>
-
+<h1>It's My Birthday</h1>
+<h2>on the 7th Nov</h2>
+<!-- Example image URL -->
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt=" this is birthday cake pic" />
+<h3>What to bring:</h3>
+<ul>
+    <li>Baloons(I love ballons)</li>
+    <li>Cake(I'm really good at eating)</li>
+    <li>An appetite(there will be lots of food)</li>
+</ul>
+<h3>This is where you need to go</h3>
+<!-- Example Google Maps Link -->
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
